no new changes. fixing bug error with prof pic not showing

--- a/style.css
+++ b/style.css
@@ -361,9 +361,6 @@ input[type="submit"]:hover {
 
 
 /* 
-
-
-
 */
 
 
@@ -683,7 +680,6 @@ input[type="submit"]:hover {
     display: inline-block;
     width: 160px;
     height: 160px;
-    margin-left: 600px;
 }
 
 .photo__frame img,
